--- a/src/Web/RecipeBook.Web/Views/IngredientsSet/IngredientsSetItemsList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/IngredientsSet/IngredientsSetItemsList.cshtml
@@ -73,32 +73,33 @@
                     <input asp-for="@Model.IngredientsSetItems[i].Status" id='Status_input_ingredientsset_items_@Model.IngredientsSetItems[i].Id' type="hidden" />
                 }
             }
-            <div class="form-inline align-items-end">
-                @if (Model.Mode == "Edit")
-                {
-                    <button type="submit" asp-controller="Recipe" asp-action="Edit" asp-route-id="@Model.RecipeId" formmethod="get" class="btn btn-sm btn-primary rounded-pill">
-                        <i class="fas fa-arrow-circle-left"></i>Back to Recipe
-                    </button>
-                    <button type="submit" asp-action="Edit" class="btn btn-sm btn-success rounded-pill">
-                        <i class="fas fa-check-circle"></i>Save
-                    </button>
-                    <button type="reset" class="btn btn-sm btn-secondary rounded-pill">
-                        <i class="fas fa-undo"></i>Reset
-                    </button>
-                    @*<button type="submit" asp-action="Delete" class="btn btn-sm btn-danger rounded-pill">
-                        <i class="fas fa-times-circle"></i>Delete
-                    </button>*@
-                }
-                else
-                {
-                    <button type="submit" asp-action="Create" class="btn btn-sm btn-success rounded-pill">
-                        <i class="fas fa-check-circle"></i>Create
-                    </button>
-                    <button type="reset" class="btn btn-sm btn-secondary rounded-pill">
-                        <i class="fas fa-undo"></i>Reset
-                    </button>
-                }
-            </div>
+        <div class="form-inline align-items-end">
+            @if (Model.Mode == "Edit")
+            {
+                <a class="btn btn-sm btn-primary rounded-pill" asp-controller="Recipe" asp-action="Edit" asp-route-id="@Model.RecipeId">
+                    <i class="fas fa-arrow-circle-left"></i>Back to Recipe
+                </a>
+
+                <button type="submit" asp-action="Edit" class="btn btn-sm btn-success rounded-pill">
+                    <i class="fas fa-check-circle"></i>Save
+                </button>
+                <button type="reset" class="btn btn-sm btn-secondary rounded-pill">
+                    <i class="fas fa-undo"></i>Reset
+                </button>
+                @*<button type="submit" asp-action="Delete" class="btn btn-sm btn-danger rounded-pill">
+                <i class="fas fa-times-circle"></i>Delete
+            </button>*@
+            }
+            else
+            {
+                <button type="submit" asp-action="Create" class="btn btn-sm btn-success rounded-pill">
+                    <i class="fas fa-check-circle"></i>Create
+                </button>
+                <button type="reset" class="btn btn-sm btn-secondary rounded-pill">
+                    <i class="fas fa-undo"></i>Reset
+                </button>
+            }
+        </div>
         </form>
     }
 }
