--- a/src/Web/RecipeBook.Web/Views/Recipe/Edit.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Edit.cshtml
@@ -14,7 +14,15 @@
         <div class="row">
             <div class="col-md-8 col-lg-7 pb-4">
                 <div class="card card-inverse card-primary" id="image_box" data-value="@Model.Id">
-                    <img id="uploaded_image" class="img-fluid" src="@Model.ImagePath" alt="Image" width="680" height="680" draggable="true">
+                    @{ if (string.IsNullOrEmpty(Model.ImagePath))
+                        {
+                            <img id="uploaded_image" class="img-fluid" src="~/images/PlaceHolder680x680.jpg" alt="No image here" width="680" height="680" draggable="true">
+                        }
+                        else
+                        {
+                            <img id="uploaded_image" class="img-fluid" src="@Model.ImagePath" alt="No image here" on width="680" height="680" draggable="true">
+                        }
+                    }
                 </div>
             </div>
             <div class="col-md-4 col-lg-5">
