--- a/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
@@ -16,26 +16,26 @@
                      title=@item.Name width="100" height="100">
                 <div class="media-body mr-3">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <h5 class="mt-0 mb-1"><a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h5>
                             <p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
                         </div>
-                        <div class="col-2">
+                        <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
                             <button type="button" class="btn btn-sm btn-success rounded-pill" onclick=homeSearchViewHelper.OnCookedTodayClick('@item.Id')><i class="fas fa-check-circle"></i>Cooked Today</button>
                         </div>
                         @if (item.IsInMenu)
                         {
-                            <div class="col-2">
+                            <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
                                 <button type="button" class="btn btn-sm btn-danger rounded-pill" id='MenuButton_@item.Id' data-value="false" onclick=homeSearchViewHelper.OnMenuClick('@item.Id')><i class="fas fa-minus-circle"></i>Menu</button>
                             </div>
                         }
                         else
                         {
-                            <div class="col-2">
+                            <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
                                 <button type="button" class="btn btn-sm btn-success rounded-pill" id='MenuButton_@item.Id' data-value="true" onclick=homeSearchViewHelper.OnMenuClick('@item.Id')><i class="fas fa-plus-circle"></i>Menu</button>
                             </div>
                         }
-                        <div class="col-2">
+                        <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
                             <button type="submit" class="btn btn-sm btn-danger rounded-pill" id='DeleteButton_@item.Id'
                                     onclick="homeSearchViewHelper.OnDelete('@item.Id', '@item.Name')">
                                 <i class="fas fa-trash-alt"></i>Delete
