--- a/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
@@ -16,14 +16,14 @@
                                  title=@item.Name width="100" height="100">
                             <div class="media-body mr-3">
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                         <h5 class="mt-0 mb-1"><a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h5>
                                         <p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
                                         <button type="submit" class="btn btn-sm btn-success rounded-pill" asp-action="UpdateLastCookedDate" asp-route-id="@item.Id"><i class="fas fa-check-circle"></i>Cooked Today</button>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
                                         <button type="submit" asp-action="RemoveRecipeFromMenu" asp-route-id="@item.Id" class="btn btn-sm btn-danger rounded-pill"><i class="fas fa-minus-circle"></i>Menu</button>
                                     </div>
                                 </div>
