--- a/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
@@ -13,7 +13,7 @@
                         }
                         else
                         {
-                            <img class="img-fluid" src="@Model.ImagePath" alt="No image here" on width="680" height="680" draggable="true">
+                            <img class="img-fluid" src="@Model.ImagePath" alt="No image here" width="680" height="680" draggable="true">
                         }
                     }
 
