--- a/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/ResultList.cshtml
@@ -17,8 +17,12 @@
                 <div class="media-body mr-3">
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                            <h5 class="mt-0 mb-1"><a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h5>
-                            <p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
+                            <a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">
+                                <h5 class="mt-0 mb-1">
+                                    @item.Name
+                                </h5>
+                                <p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
+                            </a>
                         </div>
                         <div class="col-sm-4 col-md-2 col-lg-2 col-xl-2">
                             <button type="button" class="btn btn-sm btn-success rounded-pill" onclick=homeSearchViewHelper.OnCookedTodayClick('@item.Id')><i class="fas fa-check-circle"></i>Cooked Today</button>
