--- a/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
@@ -3,7 +3,7 @@
 <form id="keyForm" method="Post"></form>
 
 <div class="container">
-    <form method="Post" >
+    <form method="Post">
         @{int elCount = Model.AllItems.Count();
             if (elCount != 0)
             {
@@ -17,8 +17,12 @@
                             <div class="media-body mr-3">
                                 <div class="row">
                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                        <h5 class="mt-0 mb-1"><a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">@item.Name</a></h5>
-                                        <p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
+                                        <a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">
+                                            <h5 class="mt-0 mb-1">
+                                                @item.Name
+                                            </h5>
+                                            <p class="mt-0 mb-1 text-muted">Last cooked: @item.LastCookedDays days</p>
+                                        </a>
                                     </div>
                                     <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3">
                                         <button type="submit" class="btn btn-sm btn-success rounded-pill" asp-action="UpdateLastCookedDate" asp-route-id="@item.Id"><i class="fas fa-check-circle"></i>Cooked Today</button>
