--- a/src/Web/RecipeBook.Web/Views/Home/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div asp-validation-summary="All" class="text-danger"></div>
 
 <div class="container">
-    <form class="form-inline justify-content-center" asp-action="Search" method="post">        
+    <form class="form-inline justify-content-center" asp-controller="Recipe" asp-action="Search" method="post">        
         <input asp-for=@Model.SearchData.Text class="search-form form-control" placeholder="Search..." id="searchBox" type="text">
         <span asp-validation-for=@Model.SearchData.Text class="text-danger"></span>
         <button type="submit" class="btn btn-default" aria-label="Left Align">
@@ -27,7 +27,7 @@
             <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
-                        <form asp-action="Search" method="post">
+                        <form asp-controller="Recipe" asp-action="Search" method="post">
                             <input asp-for=@Model.SearchData.RecipeTypes type="hidden" value="@item.Id"/>
                             <input src=@currentImageSource type ="image" style="width:100%"  asp-append-version="true" title="@item.Name">
                             <div class="text-center">
