--- a/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
@@ -17,7 +17,7 @@
                             <div class="media-body mr-3">
                                 <div class="row">
                                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                        <a asp-controller="Recipe" asp-action="Index" asp-route-id="@item.Id">
+                                        <a asp-controller="Recipe" asp-action="Details" asp-route-id="@item.Id">
                                             <h5 class="mt-0 mb-1">
                                                 @item.Name
                                             </h5>
