--- a/src/Web/RecipeBook.Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/cropperjs/cropper.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap-toggle/css/bootstrap-toggle.css" asp-append-version="true" />
+    <link rel="icon" type="image/x-icon" href="/favicon.svg">
  </head>
 <body>
     <header>
@@ -25,7 +26,7 @@
                     <partial name="_LoginPartial" />
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Recipe" asp-action="Index">Recipes</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Recipe" asp-action="Create"><span class="badge rounded-pill badge-secondary p-1">New</span>Recipe</a>
