Reorder and rename view models

--- a/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model RecipeBook.Web.ViewModels.Home.SearchViewModel
+﻿@model RecipeBook.Web.ViewModels.Recipe.IndexViewModel
 
 <form id="keyForm" method="Post"></form>
 
