1.Rename of IIngredientService and IRecipeServices names 2.Search logic from recipe controller is moved to RecipeServices and from ingredients controller to IngredientService 3.RecipeServices is changed to accept httpContextAccessor to be able to get current user and show custom taste and easy rates(This logic is removed from auto mapper) 4.Test settings are changed to use test db 5.Automapper registration is added to Sandbox Program.cs 6.Classes for recipe services tests are added

--- a/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Menu/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model RecipeBook.Web.ViewModels.Menu.MenuViewModel
+﻿@model RecipeBook.Web.ViewModels.Menu.IndexViewModel
 
 <form id="keyForm" method="Post"></form>
 
