TS Const class and AutocompleteSearchEnum are added

--- a/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Index.cshtml
@@ -29,6 +29,7 @@
     <script src="~/js/recipeIndexView.js" asp-append-version="true"></script>
     <script src="~/js/sideBar.js" asp-append-version="true"></script>
     <script src="~/js/fiveStarsVote.js" asp-append-version="true"></script>
+    <script src="~/js/autocompleteSearchEnum.js" asp-append-version="true"></script>
     <script>
 
         var recipeIndexViewHelper = new RecipeIndexViewHelper('@Model.SearchData.Text', '@Model.SearchData.RecipeTypes', '@Model.SearchData.Ingredients');
