--- a/src/Web/RecipeBook.Web/Views/Home/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Home/Index.cshtml
@@ -46,4 +46,5 @@
 
 @section Scripts {
     <script src="~/js/homeIndexView.js" asp-append-version="true"></script>
+    <script src="~/js/autocompleteSearchEnum.js" asp-append-version="true"></script>
 }
