--- a/src/Web/RecipeBook.Web/Views/Ingredients/Index.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/Index.cshtml
@@ -16,4 +16,5 @@
 @section Scripts {
     <script src="~/js/ingredientIndexView.js" asp-append-version="true"></script>
     <script src="~/js/sideBar.js" asp-append-version="true"></script>
+    <script src="~/js/autocompleteSearchEnum.js" asp-append-version="true"></script>
 }
