Magic strings are removed ;)

--- a/src/Web/RecipeBook.Web/Views/Ingredients/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/Create.cshtml
@@ -100,5 +100,6 @@
     <script src="~/js/ingredientCreateView.js" asp-append-version="true"></script>
     <script src="~/js/cropImage.js" asp-append-version="true"></script>
     <script src="~/js/dragDropImage.js" asp-append-version="true"></script>
+    <script src="~/js/imageDataKeyEnum.js" asp-append-version="true"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
