--- a/src/Web/RecipeBook.Web/Views/Ingredients/Edit.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/Edit.cshtml
@@ -100,5 +100,7 @@
     <script src="~/js/ingredientEditView.js" asp-append-version="true"></script>
     <script src="~/js/cropImage.js" asp-append-version="true"></script>
     <script src="~/js/dragDropImage.js" asp-append-version="true"></script>
+    <script src="~/js/imageDataKeyEnum.js" asp-append-version="true"></script>
+    <script src="~/js/imageTypeEnum.js" asp-append-version="true"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
