--- a/src/Web/RecipeBook.Web/Views/Recipe/Edit.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Edit.cshtml
@@ -214,4 +214,6 @@
     <script src="~/js/cropImage.js" asp-append-version="true"></script>
     <script src="~/js/dragDropImage.js" asp-append-version="true"></script>
     <script src="~/js/fiveStarsVote.js" asp-append-version="true"></script>
+    <script src="~/js/imageDataKeyEnum.js" asp-append-version="true"></script>
+    <script src="~/js/imageTypeEnum.js" asp-append-version="true"></script>
 }
