1.Side bar search bug is fixed in ingredient index view and ingredientsset create and edit view 2.Value of MODEL_DATA_ELEMENET_ID in IngredientsSetView.ts is fixed

--- a/src/Web/RecipeBook.Web/Views/IngredientsSet/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/IngredientsSet/Create.cshtml
@@ -27,4 +27,5 @@
     <script src="~/js/ingredientsSetView.js" asp-append-version="true"></script>
     <script src="~/js/sideBar.js" asp-append-version="true"></script>
     <script src="~/js/autocompleteSearchEnum.js" asp-append-version="true"></script>
+    <script src="~/js/sideBarSearchFieldEnum.js" asp-append-version="true"></script>
 }
