--- a/src/Web/RecipeBook.Web/Views/Ingredients/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/Create.cshtml
@@ -14,6 +14,14 @@
             <div class="col-md-8 col-lg-7 pb-4">
                 <div class="card card-inverse card-primary" id="image_box" data-value="@Model.Id">
                     <img id="uploaded_image" class="img-fluid text-center" src="~/images/PlaceHolder680x680.jpg" alt="Image" width="680" height="680" draggable="true">
+                    <div class="row">
+                        <div class="col-12 pl-4 pr-4 pt-4">
+                            <label>Change image: DRAG and DROP OR </label>
+                        </div>
+                        <div class="col-12 pl-4 pr-4 pb-4">
+                            <input id="file-selector" accept="image/*" style="text-align-last:left" type="file">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4 col-lg-5">
@@ -101,5 +109,6 @@
     <script src="~/js/cropImage.js" asp-append-version="true"></script>
     <script src="~/js/dragDropImage.js" asp-append-version="true"></script>
     <script src="~/js/imageDataKeyEnum.js" asp-append-version="true"></script>
+    <script src="~/js/imagefileSelector.js" asp-append-version="true"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
