--- a/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Create.cshtml
@@ -15,7 +15,15 @@
         <div class="row">
             <div class="col-md-8 col-lg-7 pb-4">
                 <div class="card card-inverse card-primary" id="image_box" data-value="@Model.Id">
-                    <img id="uploaded_image" class="img-fluid" src="~/images/PlaceHolder680x680.jpg" alt="Image" width="680" height="680" draggable="true">
+                    <img id="uploaded_image" class="img-fluid" src="~/images/PlaceHolder680x680.jpg" alt="Image" width="680" height="680" draggable="true">                    
+                    <div class="row">
+                        <div class="col-12 pl-4 pr-4 pt-4">
+                            <label>Change image: DRAG and DROP OR </label>
+                        </div>
+                        <div class="col-12 pl-4 pr-4 pb-4">
+                            <input id="file-selector" accept="image/*" style="text-align-last:left" type="file">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4 col-lg-5">
@@ -53,13 +61,13 @@
                                         <span asp-validation-for="@Model.LastCooked" class="text-danger"></span>
                                     </div>
                                 </div>
-                            </div>                        
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-        </div>       
+        </div>
         <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
@@ -101,4 +109,6 @@
     <script src="~/js/fiveStarsVote.js" asp-append-version="true"></script>
     <script src="~/js/imageDataKeyEnum.js" asp-append-version="true"></script>
     <script src="~/js/imageTypeEnum.js" asp-append-version="true"></script>
+    <script src="~/js/imagefileSelector.js" asp-append-version="true"></script>
+    
 }
