--- a/src/Web/RecipeBook.Web/Views/Recipe/Details.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Recipe/Details.cshtml
@@ -9,7 +9,7 @@
                 <div class="card card-inverse card-primary" id="image_box">
                     @{ if (string.IsNullOrEmpty(Model.ImagePath))
                         {
-                            <img class="img-fluid" src="~/images/PlaceHolder680x680.jpg" alt="No image here" width="680" height="680" draggable="true">
+                            <img class="img-fluid" alt="No image here" width="680" height="680" draggable="true">                            
                         }
                         else
                         {
