Added imageTypeEnum.js to Create view

--- a/src/Web/RecipeBook.Web/Views/Ingredients/Create.cshtml
+++ b/src/Web/RecipeBook.Web/Views/Ingredients/Create.cshtml
@@ -109,6 +109,7 @@
     <script src="~/js/cropImage.js" asp-append-version="true"></script>
     <script src="~/js/dragDropImage.js" asp-append-version="true"></script>
     <script src="~/js/imageDataKeyEnum.js" asp-append-version="true"></script>
+    <script src="~/js/imageTypeEnum.js" asp-append-version="true"></script>
     <script src="~/js/imagefileSelector.js" asp-append-version="true"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
